[flake8]
exclude = build,dist,docs/conf.py,*.egg-info,.eggs,.cache,.tox
max-line-length = 79

[pytest]
addopts = --color=auto --cov=concierge_jinja --cov-report=term-missing
norecursedirs = build dist docs *.egg-info .eggs cache .tox

[wheel]
universal = 0

[metadata]
name = concierge-jinja
version = 0.2.1
description-file = README.rst
summary = Jinja2 templating for concierge
author = Sergey Arkhipov
author-email = serge@aerialsounds.org
maintainer = Sergey Arkhipov
maintainer-email = serge@aerialsounds.org
license = MIT
home-page = https://github.com/9seconds/concierge-jinja
project-url = https://github.com/9seconds/concierge-jinja
requires-python = >=3.3
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    concierge_jinja

[entry_points]
concierge.templater =
    jinja = concierge_jinja.templater:Jinja2Templater

[global]
setup-hooks =
    pbr.hooks.setup_hook
